# BALE

./: .gitignore  LICENSE  README.md  config.yaml  convert_bids_to_fif.py  copy_last_aomic_frame.py  extract_aomic_frames.py  extract_aomic_recordings.py  extract_features.py  extract_image_features.py  extract_nemo_features.py  generate_results_figures.py  merge_tune_files.py  pyproject.toml  run.py  run_experiments.py  run_experiments.sh  run_tune.sh
bale/: __init__.py
bale/dataset/: __init__.py  dataset.py  helpers.py
bale/helpers/: misc.py
bale/model/: brainy.py  classification_trainer.py  helpers.py  loss.py  modality.py
bale/visual/: vis.py
